--- a/Daizy.html
+++ b/Daizy.html
@@ -102,16 +102,16 @@
     <section class="about-container container my-5 " id="ABOUT">
         <div class="row">
             <div class="col-md-6 mt-4 mb-5">
-                <p class="h2 mb- py-5 fw-bold about-item">This is My Story & Thinks Kind of personaly</p>
+                <p class="h2 mb-3 py-5 fw-bold about-item">This is My Story & Thinks Kind of personaly</p>
                 <p class="mb-4 text-secondary about-content ">​Edit this text to make it your own. To edit, simply click
                     directly on the text to start adding your own words. You can move the text by dragging and dropping
                 </p>
-                <p class=" text-secondary about-content">The AirMining dashboard gives you real-time insight into how
+                <p class=" text-secondary about-content-one">The AirMining dashboard gives you real-time insight into how
                     many devices are currently mining, your overall performance, and full earnings breakdown. mairela
                     Amare</p>
-                <button class="btn learnBtn px-5 mb -3">Learn More</button>
+                <button class="btn learnBtn ">LEARN MORE</button>
             </div>
-            <div class="col-md-6 ">
+            <div class="col-md-6 ps-3">
                 <img src="./about-img.jpg" class="img-fluid">
             </div>
         </div>
@@ -357,7 +357,7 @@
                     <div class="row ms-3 me-auto">
                         <div class="col-lg-3">
                             <div class="card bg-dark text-white">
-                                <img src="/Daizy - Personal Portfolio Template_files/works-1.jpg" class="card-img"
+                                <img src="./works-1.jpg" class="card-img"
                                     alt="...">
                                 <div class="card-img-overlay ">
                                     <h5 class="card-title text-light ">Dark Portfolio Web Template</h5>
@@ -369,7 +369,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="card bg-dark text-white">
-                                <img src="./Daizy - Personal Portfolio Template_files/works-2.jpg" class="card-img"
+                                <img src="./works-2.jpg" class="card-img"
                                     alt="...">
                                 <div class="card-img-overlay ">
                                     <h5 class="card-title text-light ">Dark Portfolio Web Template</h5>
@@ -381,7 +381,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="card bg-dark text-white">
-                                <img src="./Daizy - Personal Portfolio Template_files/works-3.jpg" class="card-img"
+                                <img src="./works-3.jpg" class="card-img"
                                     alt="...">
                                 <div class="card-img-overlay ">
                                     <h5 class="card-title text-light ">Dark Portfolio Web Template</h5>
@@ -393,7 +393,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="card bg-dark text-white">
-                                <img src="./Daizy - Personal Portfolio Template_files/works-4.jpg" class="card-img"
+                                <img src="./works-4.jpg" class="card-img"
                                     alt="...">
                                 <div class="card-img-overlay ">
                                     <h5 class="card-title text-light ">Dark Portfolio Web Template</h5>
@@ -413,7 +413,7 @@
                     <div class="row ms-3 me-auto">
                         <div class="col-lg-3">
                             <div class="card bg-dark text-white">
-                                <img src="/Daizy - Personal Portfolio Template_files/works-3.jpg" class="card-img"
+                                <img src="./works-2.jpg" class="card-img"
                                     alt="...">
                                 <div class="card-img-overlay ">
                                     <h5 class="card-title text-light ">Dark </h5>
@@ -425,7 +425,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="card bg-dark text-white">
-                                <img src="/Daizy - Personal Portfolio Template_files/works-1.jpg" class="card-img"
+                                <img src="./works-1.jpg" class="card-img"
                                     alt="...">
                                 <div class="card-img-overlay ">
                                     <h5 class="card-title text-light ">Dark Portfolio Web Template</h5>
@@ -437,7 +437,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="card bg-dark text-white">
-                                <img src="/Daizy - Personal Portfolio Template_files/works-1.jpg" class="card-img"
+                                <img src="./works-3.jpg" class="card-img"
                                     alt="...">
                                 <div class="card-img-overlay ">
                                     <h5 class="card-title text-light ">Dark Portfolio Web Template</h5>
@@ -449,7 +449,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="card bg-dark text-white">
-                                <img src="/Daizy - Personal Portfolio Template_files/works-1.jpg" class="card-img"
+                                <img src="./works-4.jpg" class="card-img"
                                     alt="...">
                                 <div class="card-img-overlay ">
                                     <h5 class="card-title text-light ">Dark Portfolio Web Template</h5>
@@ -489,10 +489,10 @@
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Daizy - Personal Portfolio Template_files/blog-1.jpg" class="card-img-top" alt="...">
+                        <img src="./blog-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title mt-3">Tips For Presenting</h5>
-                            <h6 class="card-subtitle mb-2 mt-3 text-muted fw-light">May 3, 2018 By John Smith</h6>
+                            <h6 class="card-subtitle mb-2 mt-3 text-muted fw-light">May 3, 2018          By John Smith</h6>
                             <p class="card-text mt-3">Aenean et facilisis justo vitae ortis augue Orci varius
                                 mairelNulla vitae Libero Mairela amare.</p>
                             <ol class="breadcrumb">
@@ -503,7 +503,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Daizy - Personal Portfolio Template_files/blog-2.jpg" class="card-img-top" alt="...">
+                        <img src="./blog-2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title mt-3 ">Action is a Movement</h5>
                             <h6 class="card-subtitle mb-2 mt-3 text-muted fw-light">May 3, 2018 By John Smith</h6>
@@ -517,7 +517,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="/Daizy - Personal Portfolio Template_files/blog-3.jpg" class="card-img-top" alt="...">
+                        <img src="./blog-3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title mt-3">We Can't Have Nice Things </h5>
                             <h6 class="card-subtitle mb-2 mt-3 text-muted fw-light">May 3, 2018 By John Smith</h6>
